# olib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml  release.yml  sync-wiki.yml
cli/: main.c
docs/: _config.yml  examples.md  getting-started.md  index.md
docs/api/: base.md  formats.md  helpers.md  object.md  serializer.md
examples/: basic.c  binary.c  example_utils.h  json.c  text.c  toml.c  xml.c  yaml.c
include/: olib.h
include/olib/: olib_base.h  olib_formats.h  olib_helpers.h  olib_object.h  olib_serializer.h
samples/: example1.json  example1.toml  example1.txt  example1.xml  example1.yaml  example2.json  example2.toml  example2.txt  example2.xml  example2.yaml
src/: olib.c  olib_base.c  olib_helpers.c  olib_object.c  olib_serializer.c
src/formats/: olib_serializer_binary.c  olib_serializer_json_binary.c  olib_serializer_json_text.c  olib_serializer_text.c  olib_serializer_toml.c  olib_serializer_xml.c  olib_serializer_yaml.c  text_parsing_utilities.c  text_parsing_utilities.h
tests/: olib_tests.cpp  test_edge_cases.cpp  test_helpers.cpp  test_memory.cpp  test_object_array.cpp  test_object_creation.cpp  test_object_dupe.cpp  test_object_matrix.cpp  test_object_struct.cpp  test_object_values.cpp  test_sample_files.cpp  test_serializers.cpp  test_utils.h
